tests/type-errors/fun_instr_error_not_found.arl
archetype fun_instr_error_not_found

variable res : nat = 0

function f() {
  res := 2
}

entry exec() {
  g()
}
